--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ bindgen = "0.64.0"
 num = "0.4.0"
 num-derive = "0.3.3"
 num-traits = "0.2.15"
+
+[profile.release]
+lto = true
+strip = true
+panic = "abort"
