--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "yaslapi-sys"
 version = "0.1.0"
 edition = "2021"
+description = "A library that provides bindings to the Yet Another Scripting Language (YASL) API."
+license = "MIT"
+license-file = "LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
